exerciciogb/src/FOOLParser.py
# Generated from FOOL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FOOLParser ( Parser ):

    grammarFileName = "FOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "';'", "'void'", "'main'", 
                     "'('", "')'", "','", "'int'", "'bool'", "'if'", "'else'", 
                     "'while'", "'return'", "'='", "'or'", "'and'", "'=='", 
                     "'<'", "'>'", "'+'", "'*'", "'True'", "'False'", "'not'", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "RBRACE", "LBRACE", "IDENTIFICADOR", 
                      "DECIMAL", "WHITESPACE" ]

    RULE_program = 0
    RULE_classDecl = 1
    RULE_classBody = 2
    RULE_fieldDecl = 3
    RULE_mainDecl = 4
    RULE_methodDecl = 5
    RULE_params = 6
    RULE_param = 7
    RULE_dataType = 8
    RULE_block = 9
    RULE_stmt = 10
    RULE_conditional = 11
    RULE_return = 12
    RULE_assign = 13
    RULE_expr = 14
    RULE_methodCall = 15
    RULE_arguments = 16
    RULE_logicalOrExpr = 17
    RULE_logicalAndExpr = 18
    RULE_equalityExpr = 19
    RULE_relationalExpr = 20
    RULE_additiveExpr = 21
    RULE_multiplicativeExpr = 22
    RULE_primaryExpr = 23

    ruleNames =  [ "program", "classDecl", "classBody", "fieldDecl", "mainDecl", 
                   "methodDecl", "params", "param", "dataType", "block", 
                   "stmt", "conditional", "return", "assign", "expr", "methodCall", 
                   "arguments", "logicalOrExpr", "logicalAndExpr", "equalityExpr", 
                   "relationalExpr", "additiveExpr", "multiplicativeExpr", 
                   "primaryExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    RBRACE=25
    LBRACE=26
    IDENTIFICADOR=27
    DECIMAL=28
    WHITESPACE=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FOOLParser.EOF, 0)

        def classDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FOOLParser.ClassDeclContext)
            else:
                return self.getTypedRuleContext(FOOLParser.ClassDeclContext,i)


        def getRuleIndex(self):
            return FOOLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = FOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 48
                self.classDecl()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(FOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RBRACE(self):
            return self.getToken(FOOLParser.RBRACE, 0)

        def IDENTIFICADOR(self):
            return self.getToken(FOOLParser.IDENTIFICADOR, 0)

        def classBody(self):
            return self.getTypedRuleContext(FOOLParser.ClassBodyContext,0)


        def LBRACE(self):
            return self.getToken(FOOLParser.LBRACE, 0)

        def getRuleIndex(self):
            return FOOLParser.RULE_classDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDecl" ):
                listener.enterClassDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDecl" ):
                listener.exitClassDecl(self)




    def classDecl(self):

        localctx = FOOLParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(FOOLParser.RBRACE)
            self.state = 57
            self.match(FOOLParser.T__0)
            self.state = 58
            self.match(FOOLParser.IDENTIFICADOR)
            self.state = 59
            self.classBody()
            self.state = 60
            self.match(FOOLParser.LBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainDecl(self):
            return self.getTypedRuleContext(FOOLParser.MainDeclContext,0)


        def fieldDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FOOLParser.FieldDeclContext)
            else:
                return self.getTypedRuleContext(FOOLParser.FieldDeclContext,i)


        def methodDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FOOLParser.MethodDeclContext)
            else:
                return self.getTypedRuleContext(FOOLParser.MethodDeclContext,i)


        def getRuleIndex(self):
            return FOOLParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)




    def classBody(self):

        localctx = FOOLParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 62
                    self.fieldDecl() 
                self.state = 67
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 71
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 68
                    self.methodDecl() 
                self.state = 73
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 74
            self.mainDecl()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 134218504) != 0):
                self.state = 75
                self.methodDecl()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dataType(self):
            return self.getTypedRuleContext(FOOLParser.DataTypeContext,0)


        def IDENTIFICADOR(self):
            return self.getToken(FOOLParser.IDENTIFICADOR, 0)

        def getRuleIndex(self):
            return FOOLParser.RULE_fieldDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldDecl" ):
                listener.enterFieldDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldDecl" ):
                listener.exitFieldDecl(self)




    def fieldDecl(self):

        localctx = FOOLParser.FieldDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_fieldDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.dataType()
            self.state = 82
            self.match(FOOLParser.IDENTIFICADOR)
            self.state = 83
            self.match(FOOLParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(FOOLParser.BlockContext,0)


        def getRuleIndex(self):
            return FOOLParser.RULE_mainDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainDecl" ):
                listener.enterMainDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainDecl" ):
                listener.exitMainDecl(self)




    def mainDecl(self):

        localctx = FOOLParser.MainDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mainDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(FOOLParser.T__2)
            self.state = 86
            self.match(FOOLParser.T__3)
            self.state = 87
            self.match(FOOLParser.T__4)
            self.state = 88
            self.match(FOOLParser.T__5)
            self.state = 89
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dataType(self):
            return self.getTypedRuleContext(FOOLParser.DataTypeContext,0)


        def IDENTIFICADOR(self):
            return self.getToken(FOOLParser.IDENTIFICADOR, 0)

        def block(self):
            return self.getTypedRuleContext(FOOLParser.BlockContext,0)


        def params(self):
            return self.getTypedRuleContext(FOOLParser.ParamsContext,0)


        def getRuleIndex(self):
            return FOOLParser.RULE_methodDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDecl" ):
                listener.enterMethodDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDecl" ):
                listener.exitMethodDecl(self)




    def methodDecl(self):

        localctx = FOOLParser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methodDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.dataType()
            self.state = 92
            self.match(FOOLParser.IDENTIFICADOR)
            self.state = 93
            self.match(FOOLParser.T__4)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 134218504) != 0):
                self.state = 94
                self.params()


            self.state = 97
            self.match(FOOLParser.T__5)
            self.state = 98
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FOOLParser.ParamContext)
            else:
                return self.getTypedRuleContext(FOOLParser.ParamContext,i)


        def getRuleIndex(self):
            return FOOLParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = FOOLParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.param()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 101
                self.match(FOOLParser.T__6)
                self.state = 102
                self.param()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dataType(self):
            return self.getTypedRuleContext(FOOLParser.DataTypeContext,0)


        def IDENTIFICADOR(self):
            return self.getToken(FOOLParser.IDENTIFICADOR, 0)

        def getRuleIndex(self):
            return FOOLParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = FOOLParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.dataType()
            self.state = 109
            self.match(FOOLParser.IDENTIFICADOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(FOOLParser.IDENTIFICADOR, 0)

        def getRuleIndex(self):
            return FOOLParser.RULE_dataType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataType" ):
                listener.enterDataType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataType" ):
                listener.exitDataType(self)




    def dataType(self):

        localctx = FOOLParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dataType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 134218504) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RBRACE(self):
            return self.getToken(FOOLParser.RBRACE, 0)

        def LBRACE(self):
            return self.getToken(FOOLParser.LBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FOOLParser.StmtContext)
            else:
                return self.getTypedRuleContext(FOOLParser.StmtContext,i)


        def getRuleIndex(self):
            return FOOLParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = FOOLParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(FOOLParser.RBRACE)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 432026656) != 0):
                self.state = 114
                self.stmt()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(FOOLParser.LBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditional(self):
            return self.getTypedRuleContext(FOOLParser.ConditionalContext,0)


        def return_(self):
            return self.getTypedRuleContext(FOOLParser.ReturnContext,0)


        def assign(self):
            return self.getTypedRuleContext(FOOLParser.AssignContext,0)


        def expr(self):
            return self.getTypedRuleContext(FOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return FOOLParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = FOOLParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmt)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.conditional()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.return_()
                self.state = 124
                self.match(FOOLParser.T__1)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.assign()
                self.state = 127
                self.match(FOOLParser.T__1)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.expr()
                self.state = 130
                self.match(FOOLParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(FOOLParser.ExprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FOOLParser.BlockContext)
            else:
                return self.getTypedRuleContext(FOOLParser.BlockContext,i)


        def getRuleIndex(self):
            return FOOLParser.RULE_conditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional" ):
                listener.enterConditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional" ):
                listener.exitConditional(self)




    def conditional(self):

        localctx = FOOLParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_conditional)
        self._la = 0 # Token type
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.match(FOOLParser.T__9)
                self.state = 135
                self.match(FOOLParser.T__4)
                self.state = 136
                self.expr()
                self.state = 137
                self.match(FOOLParser.T__5)
                self.state = 138
                self.block()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==11:
                    self.state = 139
                    self.match(FOOLParser.T__10)
                    self.state = 140
                    self.block()


                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.match(FOOLParser.T__11)
                self.state = 144
                self.match(FOOLParser.T__4)
                self.state = 145
                self.expr()
                self.state = 146
                self.match(FOOLParser.T__5)
                self.state = 147
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(FOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return FOOLParser.RULE_return

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn" ):
                listener.enterReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn" ):
                listener.exitReturn(self)




    def return_(self):

        localctx = FOOLParser.ReturnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_return)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(FOOLParser.T__12)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 432013344) != 0):
                self.state = 152
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(FOOLParser.IDENTIFICADOR, 0)

        def expr(self):
            return self.getTypedRuleContext(FOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return FOOLParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = FOOLParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(FOOLParser.IDENTIFICADOR)
            self.state = 156
            self.match(FOOLParser.T__13)
            self.state = 157
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalOrExpr(self):
            return self.getTypedRuleContext(FOOLParser.LogicalOrExprContext,0)


        def getRuleIndex(self):
            return FOOLParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = FOOLParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.logicalOrExpr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(FOOLParser.IDENTIFICADOR, 0)

        def arguments(self):
            return self.getTypedRuleContext(FOOLParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return FOOLParser.RULE_methodCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodCall" ):
                listener.enterMethodCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodCall" ):
                listener.exitMethodCall(self)




    def methodCall(self):

        localctx = FOOLParser.MethodCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_methodCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(FOOLParser.IDENTIFICADOR)
            self.state = 162
            self.match(FOOLParser.T__4)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 432013344) != 0):
                self.state = 163
                self.arguments()


            self.state = 166
            self.match(FOOLParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FOOLParser.ExprContext)
            else:
                return self.getTypedRuleContext(FOOLParser.ExprContext,i)


        def getRuleIndex(self):
            return FOOLParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)




    def arguments(self):

        localctx = FOOLParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.expr()
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 169
                self.match(FOOLParser.T__6)
                self.state = 170
                self.expr()
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalAndExpr(self):
            return self.getTypedRuleContext(FOOLParser.LogicalAndExprContext,0)


        def logicalOrExpr(self):
            return self.getTypedRuleContext(FOOLParser.LogicalOrExprContext,0)


        def getRuleIndex(self):
            return FOOLParser.RULE_logicalOrExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalOrExpr" ):
                listener.enterLogicalOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalOrExpr" ):
                listener.exitLogicalOrExpr(self)


